k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: iam-dashboard
  name: iam-dashboard
  namespace: dev
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: iam-dashboard
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: iam-dashboard
    spec:
      containers:
        - image: cnafsoftwaredevel/iam-dashboard:latest
          imagePullPolicy: Always
          name: iam-dashboard
          ports:
            - containerPort: 80
              protocol: TCP
          resources:
            requests:
              cpu: 0.5
              memory: 1G
            limits:
              cpu: 1
              memory: 2G
              ephemeral-storage: 2G
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
            - name: iam-tls
              mountPath: /etc/nginx/certs/
              readOnly: true
      volumes:
        - name: iam-tls
          secret:
            secretName: iam-dashboard-tls
      automountServiceAccountToken: false
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
