k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: iam-dashboard-svc
  namespace: dev
spec:
  ports:
  - port: 443
    name: iam-dashboard
  selector:
    app: iam-dashboard
