k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: iam-dashboard-ing
  namespace: dev
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: "iam-dashboard.cnaf.infn.it"
    http:
      paths:
      - path: /
        pathType: Prefix 
        backend:
          service:
            name: iam-dashboard-svc 
            port:
              number: 443
